--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>samny.se - Samuel Nystedt</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            background: #32281F url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22xMinyMin%22%3E%0A%20%20%20%20%3Cpath%20fill%3D%22%2332281F%22%20d%3D%22M0%200h500v500H0z%22/%3E%0A%20%20%20%20%3Cpath%20fill%3D%22%23F0C%22%0A%20%20%20%20%20%20%20%20%20%20d%3D%22M414.6%2056.3c-25.6-4.5-54.6-10-94.1-10C192%2046.2%20111%20120.3%20111%20228.6c0%2068.8%2026.5%20131.9%20133.8%20220%200%200%2026.6%2023.1%2054.5%2051.4h133.8c-22.6-32.1-54.9-67.6-103.4-105.8l-29.4-23.4c-97.2-75.9-123.5-113.3-123.5-171%200-73.9%2054.6-117.9%20124.5-117.9%2093.1%200%20120.4%2042.3%20126.5%2053.4%206.1%2011.1%2012.1%2038.3%2013.2%2050.5.2%201.3.3%202.5.5%203.7l13.7.6c.3-3.4.8-23.5.9-29.5%201.4-69%203.8-87.2%204-92.2.2-2.7.6-6.8.6-6.8s-19.2-.6-46.1-5.3z%22/%3E%0A%3C/svg%3E) no-repeat fixed bottom left;
+            background-size: contain;
+            margin: 0;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+        .visuallyhidden {
+            border: 0;
+            clip: rect(0 0 0 0);
+            clip-path: inset(50%);
+            height: 1px;
+            margin: -1px;
+            overflow: hidden;
+            padding: 0;
+            position: absolute;
+            width: 1px;
+            white-space: nowrap;
+        }
+
+        .float-right {
+            float: right;
+        }
+
+        .navlinks {
+            font-size: 2rem;
+            margin: 0.5em;
+        }
+
+        .navlinks__item {
+            list-style: none;
+            display: inline-block;
+        }
+
+        .navlinks__link {
+            display: block;
+        }
+    </style>
+    <link rel="stylesheet" href="/icomoon/style.css">
+</head>
+<body>
+<ul class="navlinks float-right">
+    <li class="navlinks__item"><a class="navlinks__link" href="https://github.com/samny"><span
+            class="icon-github"></span><span
+            class="visuallyhidden">Github</span></a></li>
+    <li class="navlinks__item"><a class="navlinks__link" href="https://www.linkedin.com/in/samuelnystedt"
+    ><span
+            class="icon-linkedin"><span class="visuallyhidden">LinkedIn</span></a></li>
+</ul>
+</body>
+</html>
