--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="ldP6X70tcXw1x7TfrSIjY2Koy-epSZMV5-JPI-A173c" />
     <meta charset="UTF-8">
     <title>samny.se - Samuel Nystedt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
